--- a/index.html
+++ b/index.html
@@ -315,10 +315,11 @@
 
                     </div>
                     <p id="acco-body-4" class="hidden py-2 font-light">Available on all chromium supported browsers</p>
-                    <button type="button"
-                        class="mt-12 flex self-center btn btn-purple hover:bg-bookmark-white hover:text-black">More
-                        Info</button>
+
                 </div>
+                <button type="button"
+                    class="mx-48 mt-12  flex justify-center  btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                    Info</button>
 
 
 
