--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- header -->
 
     <header class="dark:bg-slate-900">
-        <div class="absolute right-16 mt-3 md:right-48 md:my-3 md:pl-4 ">
+        <div class="right-16 mt-3 md:right-48 md:my-3 md:pl-4 ">
 
             <button id="theme-toggle" type="button"
                 class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-full text-sm p-2.5 ">
