--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         </div>
         <nav class="desktop-nav container flex items-center py-4 mt-4 sm:mt-12 dark:bg-slate-900">
             <!-- <div class=><i class="mobile-menu-btn md:invisible fa-solid fa-bars text-2xl cursor-pointer "></i></div> -->
-            <div class="log-dark py-1 px-4 md:-mx-6  "> <img src="./imgs/logo-bookmark.svg" alt=""> </div>
+            <div class="log-dark py-1 px-4 md:-mx-6  ">
+                <img src="./imgs/logo-bookmark.svg" alt="">
+
+            </div>
 
 
             <ul
@@ -134,7 +137,7 @@
     </section>
 
     <!-- feature -->
-    <section class="bg-bookmark-white py-20 mt-20 lg-mt-60 dark:bg-slate-900">
+    <section class="bg-bookmark-white py-20 mt-28 lg-mt-60 dark:bg-zinc-900">
         <!-- Heading -->
         <div class="sm:w-1/3 lg:w-5/12 mx-auto px-2">
             <h1 class="text-3xl text-center text-bookmark-blue dark:text-bookmark-dk-white">Features</h1>
@@ -239,7 +242,7 @@
     </section>
 
     <!-- Download -->
-    <section class="py-20 mt-20">
+    <section class="py-20 mt-26">
         <!-- Heading -->
         <div class="sm:w-1/3 lg:w-5/12 mx-auto px-2">
             <h1 class="text-3xl text-center text-bookmark-blue dark:text-bookmark-dk-white">Download Extension</h1>
@@ -287,7 +290,7 @@
                     <h3 class="mt-5 mb-2 text-bookmark-blue text-lg dark:text-white">Add to Opera</h3>
                     <p class="text-bookmark-blue font-light dark:text-white">Minimum Version 62</p>
                 </div>
-                <hr class="border-b border-bookmark-white border-black">
+                <hr class="border-b border-bookmark-white dark:border-black">
                 <div class="flex p-6 justify-center">
                     <button type="button" class="flex-1 btn btn-purple hover:bg-bookmark-white hover:text-black">More
                         Info</button>
@@ -365,7 +368,7 @@
 
                 </div>
                 <button type="button"
-                    class="mx-[12rem] mt-10 md:mx-[30rem] md:mt-12  flex justify-center  btn btn-purple hover:bg-bookmark-white hover:text-black">More
+                    class="mx-[14rem] mt-10  md:mt-14 md:mx-[28rem]  flex justify-center  btn btn-purple hover:bg-bookmark-white hover:text-black">More
                     Info</button>
 
 
@@ -416,7 +419,8 @@
 
         </div>
 
-        <div class="flex justify-center text-white pt-6 ">Made By Siddhant Deshpande</div>
+        <div class="flex justify-center text-white pt-6 tracking-wider">Made Using TailwindCSS</div>
+        <div class="flex justify-center text-white pt-6 ">By Siddhant Deshpande</div>
         <div class=" flex justify-center text-white pt-6 px-4"><a
                 href="https://github.com/SidddhantDeshpande/Bookmarks-Website">Github</a></div>
     </footer>
