--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </nav>
 
-        <div class=" hidden mobile-menu bg-gray-100 dark:bg-slate-800 justify-end">
+        <div class=" hidden md:hidden mobile-menu bg-gray-100 dark:bg-slate-800 justify-end">
             <ul class=" space-y-12 mx-12 dark:text-white  items-end">
                 <li class="active:font-sem cursor-pointer av pt-12 text-lg">Features</li>
                 <li class="active:font-sem cursor-pointer text-lg">Pricing</li>
