--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <ul
                 class="hidden sm:flex flex-1 justify-end items-center gap-12 text-bookmark-blue  text-xs dark:text-white">
                 <li class="cursor-pointer active-menu  ">Features</li>
-                <li class="cursor-pointer">Pricing</li>
+                <li class="cursor-pointer"><a href="price.html">Pricing</a></li>
                 <li class="cursor-pointer">Contact</li>
                 <li class="cursor-pointer">
 
